added robots.txt and sitemap.xml for the SEO

--- a/index.html
+++ b/index.html
@@ -2,11 +2,58 @@
 <html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="canonical" href="https://marota.tech/" />
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
+    <meta name="googlebot" content="index, follow" />
+    <meta name="description" content="Marota Film and Software College offers professional training in software development, film making, graphics design, web development, and digital skills in Ethiopia." />
+    <meta name="keywords" content="Marota, Marota Film and Software College, software training Ethiopia, film making school Ethiopia, web development training, graphics design" />
+    <meta name="author" content="Marota Film and Software College" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Marota" />
+    <meta property="og:title" content="Marota Film and Software College" />
+    <meta property="og:description" content="Learn software, film making, graphics, and digital skills with Marota Film and Software College." />
+    <meta property="og:url" content="https://marota.tech/" />
+    <meta property="og:image" content="https://marota.tech/favicon.png" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Marota Film and Software College" />
+    <meta name="twitter:description" content="Learn software, film making, graphics, and digital skills with Marota Film and Software College." />
+    <meta name="twitter:image" content="https://marota.tech/favicon.png" />
+
+    <meta name="theme-color" content="#0a192f" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Marota</title>
+    <title>Marota Film and Software College | Learn Software & Film Skills</title>
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "EducationalOrganization",
+        "name": "Marota Film and Software College",
+        "url": "https://marota.tech/",
+        "logo": "https://marota.tech/favicon.png",
+        "description": "Marota Film and Software College provides software, film making, web development, database, hardware, and graphics training.",
+        "sameAs": [
+          "https://www.facebook.com/profile.php?id=100087120218376",
+          "https://www.tiktok.com/@marota.acadamy?_t=ZN-8xuxFw8tk2Q&_r=1",
+          "https://www.youtube.com/channel/UCYxPI7bef6t6uGjywEnYJsQ"
+        ]
+      }
+    </script>
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "Marota",
+        "url": "https://marota.tech/"
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
